wrong colour definition fixed

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -741,7 +741,7 @@ tr .property-hover {
 }
 
 .pagination { 
-  background-color: #EAF6F4;
+  background-color: #F6F7F8;
   border-radius: 0 !important;
   border-bottom: 1px solid #999999;
   margin: 0 0 -5px 0 !important;
